frontend/test/should_fail/index_edge_of_wrong_type_where_index_expected.grg
#using "index_multiple_model.gm"

rule i() {
	if{ edgesFromIndex(Ni).size() > 0; }
	
	modify {
	}
}
